1.demo中解决虚拟键盘显示或者隐藏对共享元素动画的影响。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="screenLayout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,9 +19,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ImageViewPreviewActivity"
-            android:theme="@style/TranslateActivityTheme"
-            android:label="ImageViewPreview"/>
+        <activity
+            android:name=".ImageViewPreviewActivity"
+            android:label="ImageViewPreview"
+            android:theme="@style/TranslateActivityTheme" />
     </application>
 
 </manifest>
