1.修改demo中没有对放大图片的拦截处理 2.库：解决在图片放大状态下点击和长按事件失效的问题 3.库：解决没法双指手势放大图片的问题

--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,9 @@ buildscript {
     
     repositories {
         google()
-        jcenter()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
@@ -19,9 +20,10 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-        mavenCentral()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url 'https://jitpack.io' }
+        mavenCentral()
+        jcenter()
     }
 }
 
